force-app/main/default/objects/Customer_Adhoc_Discount__c/Customer_Adhoc_Discount__c.object-meta.xml
<CustomObject>
    <label>Customer Adhoc Discount</label>
    <nameField>
        <displayFormat>Dis-{0000}</displayFormat>
        <label>Discount Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Adhoc Discounts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>