force-app/main/default/objects/Customer_Adhoc_Discount__c/fields/Discount_Date__c.field-meta.xml
<CustomField>
    <fullName>Discount_Date__c</fullName>
    <label>Discount Date</label>
    <type>Date</type>
</CustomField>