force-app/main/default/objects/Customer_Adhoc_Discount__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Customer Adhoc Discounts</relationshipLabel>
    <relationshipName>Customer_Adhoc_Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>