force-app/main/default/objects/Customer_Adhoc_Discount__c/fields/Location_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Location_Sharing__c</fullName>
    <label>Location_Sharing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Locations</valueSetName>
    </valueSet>
</CustomField>