force-app/main/default/objects/Customer_Adhoc_Discount__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Adhoc Discounts</relationshipLabel>
    <relationshipName>Customer_Adhoc_Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>