force-app/main/default/objects/Customer_Adhoc_Discount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice__c</columns>
    <columns>Country_Sharing__c</columns>
    <columns>Parent__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>